--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "commento ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./test/**/*.js",
     "start": "node app.js"
   },
   "author": "chansoo",
@@ -18,6 +18,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "mocha": "^9.0.2"
   }
 }
