--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
-{  "compilerOptions": {
+{  
+  "compilerOptions": {
       "module": "system",
       "noImplicitAny": true,
       "removeComments": true,
       "preserveConstEnums": true,
       "outFile": "../../built/local/tsc.js",
-      "sourceMap": true
+      "sourceMap": true,
+      "esModuleInterop": true,
     },
+  "include": [
+      "**/*"
+    ],
     "exclude": ["node_modules"]
-  }  
+}  
