--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9",
-    "mocha": "^9.0.2"
+    "@types/mysql": "^2.15.19",
+    "dotenv": "^10.0.0",
+    "mocha": "^9.0.2",
+    "nodemon": "^2.0.9"
   }
 }
