--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   "author": "chansoo",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.12",
-    "@types/node": "^16.0.0",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nunjucks": "^3.2.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.12",
     "@types/mysql": "^2.15.19",
+    "@types/node": "^16.0.0",
     "dotenv": "^10.0.0",
     "mocha": "^9.0.2",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2"
   }
 }
