--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {  
   "compilerOptions": {
-      "module": "CommonJS",
+        
+      "module": "es6",
       "noImplicitAny": true,
       "target": "es5"
     },
