--- a/package.json
+++ b/package.json
@@ -15,14 +15,23 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nunjucks": "^3.2.3",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
+    "@types/express-session": "^1.17.4",
     "@types/mysql": "^2.15.19",
     "@types/node": "^16.0.0",
+    "@types/nunjucks": "^3.1.5",
+    "@types/passport": "^1.0.7",
+    "@types/passport-kakao": "^0.2.1",
+    "@types/passport-local": "^1.0.34",
     "dotenv": "^10.0.0",
+    "express-session": "^1.17.2",
     "mocha": "^9.0.2",
     "nodemon": "^2.0.9",
     "webpack": "^5.44.0",
