--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         
       "module": "es6",
       "noImplicitAny": true,
-      "target": "es5"
+      "target": "es5",
+      "moduleResolution": "Node"
     },
   "include": [
       "**/*"
