--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "mysql": "^2.18.1",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
