--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "commento ",
   "main": "app.js",
+  
   "scripts": {
-    "test": "mocha ./test/**/*.js --timeout 2000 --exclude ./test/client/*",
+    "test": "mocha ./test/**/*.js --timeout 2000 --exclude ./test/client/**/*.js",
     "start": "nodemon app.js"
   },
   "author": "chansoo",
   "license": "ISC",
   "dependencies": {
+    "@types/chai-http": "^4.2.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
@@ -25,18 +27,25 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.2.21",
     "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.4",
+    "@types/mocha": "^9.0.0",
     "@types/mysql": "^2.15.19",
     "@types/node": "^16.0.0",
     "@types/nunjucks": "^3.1.5",
     "@types/passport": "^1.0.7",
     "@types/passport-kakao": "^0.2.1",
     "@types/passport-local": "^1.0.34",
+    "@types/sinon": "^10.0.2",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
     "mocha": "^9.0.2",
     "nodemon": "^2.0.9",
+    "request": "^2.83.0",
+    "sinon": "^11.1.2",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
   }
